[gd_scene load_steps=11 format=3 uid="uid://daw5rck8v748p"]

[ext_resource type="Script" path="res://scenes/levels/shooter_level_1.gd" id="1_mxt6t"]
[ext_resource type="Texture2D" uid="uid://dmfuo1yo2ad2u" path="res://assets/textures/Grass.png" id="1_sh4xg"]
[ext_resource type="PackedScene" uid="uid://bv3iyr41x7r4m" path="res://scenes/levels/baby.tscn" id="3_fsrno"]
[ext_resource type="PackedScene" uid="uid://of23kxh4cy0a" path="res://scenes/player/shooter_player.tscn" id="4_s3uo3"]
[ext_resource type="AudioStream" uid="uid://bw1ulom8t0ovu" path="res://assets/music/song.mp3" id="5_26rgi"]
[ext_resource type="PackedScene" uid="uid://dmrw8iuevssks" path="res://scenes/level_objects/tree.tscn" id="6_cobja"]
[ext_resource type="Texture2D" uid="uid://btbcrkryo8ovq" path="res://assets/textures/black_out.png" id="6_yrtrr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxhxk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_osdap"]
bg_color = Color(0, 1, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkcxw"]
bg_color = Color(0.921569, 0.780392, 0.152941, 1)

[node name="shooter_level_1" type="Node2D"]
script = ExtResource("1_mxt6t")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -2821.0
offset_top = -2081.0
offset_right = -91.0
offset_bottom = 325.0
scale = Vector2(2, 2)
texture = ExtResource("1_sh4xg")
stretch_mode = 1

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Baby" parent="." groups=["baby", "family"] instance=ExtResource("3_fsrno")]
position = Vector2(1, -1)

[node name="objects" type="Node2D" parent="."]

[node name="Tree" parent="objects" instance=ExtResource("6_cobja")]
position = Vector2(-419, -177)

[node name="Tree2" parent="objects" instance=ExtResource("6_cobja")]
position = Vector2(542, -315)

[node name="Tree3" parent="objects" instance=ExtResource("6_cobja")]
position = Vector2(976, 482)

[node name="Tree4" parent="objects" instance=ExtResource("6_cobja")]
position = Vector2(9, 652)

[node name="Tree5" parent="objects" instance=ExtResource("6_cobja")]
position = Vector2(-622, 416)

[node name="shooter_player" parent="." instance=ExtResource("4_s3uo3")]
y_sort_enabled = true
position = Vector2(0, 85)

[node name="Gui" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="Gui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_yrtrr")

[node name="BabyHealth" type="ProgressBar" parent="Gui"]
offset_left = 449.0
offset_top = 10.0
offset_right = 740.0
offset_bottom = 70.0
theme_override_styles/background = SubResource("StyleBoxFlat_qxhxk")
theme_override_styles/fill = SubResource("StyleBoxFlat_osdap")
max_value = 200.0
value = 200.0
show_percentage = false

[node name="Label" type="Label" parent="Gui/BabyHealth"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 99.0
offset_top = 13.0
offset_right = 191.0
offset_bottom = 39.0
text = "baby health"

[node name="player_health" type="ProgressBar" parent="Gui"]
offset_left = 516.0
offset_top = 50.0
offset_right = 674.0
offset_bottom = 80.0
theme_override_styles/background = SubResource("StyleBoxFlat_qxhxk")
theme_override_styles/fill = SubResource("StyleBoxFlat_pkcxw")
value = 100.0
show_percentage = false

[node name="Label2" type="Label" parent="Gui/player_health"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 32.0
offset_top = 1.0
offset_right = 135.0
offset_bottom = 27.0
text = "player health"

[node name="Lap" type="Label" parent="Gui"]
modulate = Color(0, 0, 0, 1)
offset_left = 210.0
offset_top = 5.0
offset_right = 313.0
offset_bottom = 31.0
scale = Vector2(2, 2)
text = "Lap is not started"

[node name="win" type="ColorRect" parent="Gui"]
visible = false
offset_left = 78.0
offset_top = 36.0
offset_right = 1093.0
offset_bottom = 540.0

[node name="label" type="Label" parent="Gui/win"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 386.0
offset_top = 26.0
offset_right = 521.0
offset_bottom = 52.0
scale = Vector2(2, 2)
text = "you won"

[node name="Button" type="Button" parent="Gui/win"]
layout_mode = 0
offset_left = 373.0
offset_top = 186.0
offset_right = 552.0
offset_bottom = 282.0
text = "main menu"

[node name="Next_Lap" type="Label" parent="Gui"]
modulate = Color(0, 0, 0, 1)
offset_left = 514.0
offset_top = 265.0
offset_right = 649.0
offset_bottom = 291.0
scale = Vector2(2, 2)
text = "Next Lap!"

[node name="spawnpos" type="Node2D" parent="."]
position = Vector2(-99, 123)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_26rgi")
autoplay = true

[node name="enemies" type="Node2D" parent="."]

[node name="itemtimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="pressed" from="Gui/win/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="itemtimer" to="." method="_on_itemtimer_timeout"]
